@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-02T08:25:27Z",
-  "count_outdated" : 310,
-  "uniques_outdated" : 161,
-  "count" : 337,
-  "uniques" : 181,
+  "timestamp" : "2022-06-02T16:17:33Z",
+  "count_outdated" : 312,
+  "uniques_outdated" : 163,
+  "count" : 338,
+  "uniques" : 182,
   "clones" : [
-    {
-      "timestamp": "2022-05-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-05-20T00:00:00Z",
       "count": 14,
